# faso-speech

./: .gitignore  DESIGN.md  NOTES.md  PLAN.md  README.md  justfile  pyproject.toml
.github/workflows/: prek.yml
scripts/: fetch_jw_probe.py
src/faso_speech/: __init__.py  archive.py  audio.py  catalog.py  cli.py  extraction.py  http.py  language.py  models.py  review_ui.py  status.py
src/faso_speech/parsers/: __init__.py  app_builder.py
src/faso_speech/processing/: __init__.py  align_contes_segments.py  extract_timed_contes_chunks.py
src/faso_speech/scraping/: __init__.py  app_builder.py  discovery.py  raw_archive.py
src/faso_speech/sources/: __init__.py  mooreburkina.py
