[project]
name = "faso-speech"
version = "0.1.0"
description = "Speech data collection and preparation tools for Burkina Faso languages."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.0",
    "dash>=2.18.0",
    "lxml>=5.0.0",
    "msgspec>=0.18.0",
    "typer>=0.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
faso-speech = "faso_speech.cli:app"
faso-align-contes-segments = "faso_speech.processing.align_contes_segments:main"
faso-extract-timed-contes = "faso_speech.processing.extract_timed_contes_chunks:main"
faso-scrape-raw = "faso_speech.scraping.raw_archive:main"

[dependency-groups]
dev = [
    "ruff>=0.8.0",
]

[tool.ruff]
line-length = 100
